Configure CI build env for test/prod

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,13 +23,22 @@ aliases:
   - &filter-ignore-gh-pages
     branches:
       ignore: gh-pages
-  
+
 # Job definitions. Job execution is orchestrated in the 'workflows' section.
 jobs:
   build_spa:
     docker:
       - image: circleci/node:8
     steps:
+      - run:
+          name: Configure build environment
+          command: 
+            - >-
+              case "$CIRCLE_BRANCH" in
+              master) BUILD_ENV=production ;;
+              *) BUILD_ENV=test ;;
+              esac
+              echo $BUILD_ENV
       - checkout 
       - restore_cache: *restore-node-modules
       - run: 
@@ -37,11 +46,14 @@ jobs:
           command: cd app && yarn install
       - save_cache: *save-node-modules
       - run: 
-          name: Build SPA app
-          command: cd app && yarn build
-      - run: 
           name: Test SPA app
           command: cd app && yarn test -w 1 --coverage
+      - run: 
+          name: Configure build parameters
+          command: cp .env.$BUILD_ENV .env.local
+      - run: 
+          name: Build SPA app
+          command: build-spa
 # Job orchestration
 workflows:
   version: 2
