Remove guardrails and debug statements

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,12 +63,6 @@ commands:
       - run:
           name: Copy SPA assets to workspace
           command: cp -a build/. /tmp/workspace/<<parameters.environment>>
-      - run:
-          name: Show workspace contents
-          command: ls -la /tmp/workspace
-      - run:
-          name: Show workspace contents 2
-          command: ls -la /tmp/workspace/<<parameters.environment>>
       - persist_to_workspace:
           root: /tmp/workspace
           paths:
@@ -85,15 +79,9 @@ commands:
       - run:
           name: Login with Azure Service Principal
           command: az login --service-principal -u $SERVICE_PRINCIPAL_USER -p $SERVICE_PRINCIPAL_PASSWORD --tenant $SERVICE_PRINCIPAL_TENANT
-      - run:
-          name: Show workspace contents
-          command: ls -la /tmp/workspace
-      - run:
-          name: Show workspace contents 2
-          command: ls -la /tmp/workspace/<<parameters.environment>>
       - run: 
           name: Publish SPA assets to Azure Storage
-          command: az storage blob upload-batch --account-name $STORAGE_ACCOUNT_<<parameters.environment>> --source /tmp/workspace/<<parameters.environment>> --destination app --validate-content --dryrun
+          command: az storage blob upload-batch --account-name $STORAGE_ACCOUNT_<<parameters.environment>> --source /tmp/workspace/<<parameters.environment>> --destination app --validate-content
 #      - run:
 #          name: Purge Azure CDN
 #          command: az cdn endpoint purge --resource-group $RESOURCE_GROUP_<<parameters.environment>> --profile-name $CDN_PROFILE --name $STORAGE_ACCOUNT_<<parameters.environment>> --content-paths '/'
